# src/api/v1/accounts.js
@@ -19,10 +19,8 @@ router.get('/', async (req, res) => {
 
 router.post('/', async (req, res) => {
     try {
-        // Vérifier que il y a un firstname, lastname, city, reference
         const body = req.body;
         if (body.reference && body.number && body.type && body.amount) {
-            // Insert dans la bdd
             const { Accounts } = req.db;
             const account = await Accounts.create(body);
             return res.status(201).send(account);
@@ -32,7 +30,7 @@ router.post('/', async (req, res) => {
         }
     } catch (err) {
         if (err.name === 'SequelizeUniqueConstraintError') {
-            return res.status(409).send({ message: 'Customer exists déjà' })
+            return res.status(409).send({ message: 'Le compte existe déjà' })
         }
     }
 
@@ -40,10 +38,10 @@ router.post('/', async (req, res) => {
 
 router.get('/:reference', async (req, res) => {
     const reference = req.params.reference;
-    const { Customers } = req.db;
-    const customer = await Customers.findOne({ where: { reference: reference } });
-    if (customer) {
-        return res.status(200).send(customer);
+    const { Accounts } = req.db;
+    const account = await Accounts.findOne({ where: { reference: reference } });
+    if (account) {
+        return res.status(200).send(account);
     } else {
         return res.status(404)
             .send({ message: `Reference ${reference} not found` });
